Update design and make goagen
