# gen/http/activity/server/server.go
@@ -18,10 +18,9 @@ import (
 
 // Server lists the Activity service endpoint HTTP handlers.
 type Server struct {
-	Mounts                               []*MountPoint
-	FetchQiitaArticleByQiitaUserID       http.Handler
-	BatchJobMethodToRefreshQiitaActivity http.Handler
-	PickOutPastActivityOfQiita           http.Handler
+	Mounts                     []*MountPoint
+	FetchQiitaArticle          http.Handler
+	PickOutPastActivityOfQiita http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -51,13 +50,11 @@ func New(
 ) *Server {
 	return &Server{
 		Mounts: []*MountPoint{
-			{"FetchQiitaArticleByQiitaUserID", "GET", "/v1/activity/qiita/{user_id}"},
-			{"BatchJobMethodToRefreshQiitaActivity", "GET", "/v1/activity/qiita/batch"},
+			{"FetchQiitaArticle", "GET", "/v1/activity/qiita"},
 			{"PickOutPastActivityOfQiita", "GET", "/v1/activity/qiita/initialization"},
 		},
-		FetchQiitaArticleByQiitaUserID:       NewFetchQiitaArticleByQiitaUserIDHandler(e.FetchQiitaArticleByQiitaUserID, mux, dec, enc, eh),
-		BatchJobMethodToRefreshQiitaActivity: NewBatchJobMethodToRefreshQiitaActivityHandler(e.BatchJobMethodToRefreshQiitaActivity, mux, dec, enc, eh),
-		PickOutPastActivityOfQiita:           NewPickOutPastActivityOfQiitaHandler(e.PickOutPastActivityOfQiita, mux, dec, enc, eh),
+		FetchQiitaArticle:          NewFetchQiitaArticleHandler(e.FetchQiitaArticle, mux, dec, enc, eh),
+		PickOutPastActivityOfQiita: NewPickOutPastActivityOfQiitaHandler(e.PickOutPastActivityOfQiita, mux, dec, enc, eh),
 	}
 }
 
@@ -66,34 +63,31 @@ func (s *Server) Service() string { return "Activity" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.FetchQiitaArticleByQiitaUserID = m(s.FetchQiitaArticleByQiitaUserID)
-	s.BatchJobMethodToRefreshQiitaActivity = m(s.BatchJobMethodToRefreshQiitaActivity)
+	s.FetchQiitaArticle = m(s.FetchQiitaArticle)
 	s.PickOutPastActivityOfQiita = m(s.PickOutPastActivityOfQiita)
 }
 
 // Mount configures the mux to serve the Activity endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
-	MountFetchQiitaArticleByQiitaUserIDHandler(mux, h.FetchQiitaArticleByQiitaUserID)
-	MountBatchJobMethodToRefreshQiitaActivityHandler(mux, h.BatchJobMethodToRefreshQiitaActivity)
+	MountFetchQiitaArticleHandler(mux, h.FetchQiitaArticle)
 	MountPickOutPastActivityOfQiitaHandler(mux, h.PickOutPastActivityOfQiita)
 }
 
-// MountFetchQiitaArticleByQiitaUserIDHandler configures the mux to serve the
-// "Activity" service "Fetch qiita article by qiita-user-id" endpoint.
-func MountFetchQiitaArticleByQiitaUserIDHandler(mux goahttp.Muxer, h http.Handler) {
+// MountFetchQiitaArticleHandler configures the mux to serve the "Activity"
+// service "Fetch qiita article" endpoint.
+func MountFetchQiitaArticleHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
 	if !ok {
 		f = func(w http.ResponseWriter, r *http.Request) {
 			h.ServeHTTP(w, r)
 		}
 	}
-	mux.Handle("GET", "/v1/activity/qiita/{user_id}", f)
+	mux.Handle("GET", "/v1/activity/qiita", f)
 }
 
-// NewFetchQiitaArticleByQiitaUserIDHandler creates a HTTP handler which loads
-// the HTTP request and calls the "Activity" service "Fetch qiita article by
-// qiita-user-id" endpoint.
-func NewFetchQiitaArticleByQiitaUserIDHandler(
+// NewFetchQiitaArticleHandler creates a HTTP handler which loads the HTTP
+// request and calls the "Activity" service "Fetch qiita article" endpoint.
+func NewFetchQiitaArticleHandler(
 	endpoint goa.Endpoint,
 	mux goahttp.Muxer,
 	dec func(*http.Request) goahttp.Decoder,
@@ -101,13 +95,13 @@ func NewFetchQiitaArticleByQiitaUserIDHandler(
 	eh func(context.Context, http.ResponseWriter, error),
 ) http.Handler {
 	var (
-		decodeRequest  = DecodeFetchQiitaArticleByQiitaUserIDRequest(mux, dec)
-		encodeResponse = EncodeFetchQiitaArticleByQiitaUserIDResponse(enc)
-		encodeError    = EncodeFetchQiitaArticleByQiitaUserIDError(enc)
+		decodeRequest  = DecodeFetchQiitaArticleRequest(mux, dec)
+		encodeResponse = EncodeFetchQiitaArticleResponse(enc)
+		encodeError    = EncodeFetchQiitaArticleError(enc)
 	)
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "Fetch qiita article by qiita-user-id")
+		ctx = context.WithValue(ctx, goa.MethodKey, "Fetch qiita article")
 		ctx = context.WithValue(ctx, goa.ServiceKey, "Activity")
 		payload, err := decodeRequest(r)
 		if err != nil {
@@ -118,52 +112,6 @@ func NewFetchQiitaArticleByQiitaUserIDHandler(
 		}
 
 		res, err := endpoint(ctx, payload)
-
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			eh(ctx, w, err)
-		}
-	})
-}
-
-// MountBatchJobMethodToRefreshQiitaActivityHandler configures the mux to serve
-// the "Activity" service "Batch job method to refresh qiita activity" endpoint.
-func MountBatchJobMethodToRefreshQiitaActivityHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/v1/activity/qiita/batch", f)
-}
-
-// NewBatchJobMethodToRefreshQiitaActivityHandler creates a HTTP handler which
-// loads the HTTP request and calls the "Activity" service "Batch job method to
-// refresh qiita activity" endpoint.
-func NewBatchJobMethodToRefreshQiitaActivityHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) http.Handler {
-	var (
-		encodeResponse = EncodeBatchJobMethodToRefreshQiitaActivityResponse(enc)
-		encodeError    = EncodeBatchJobMethodToRefreshQiitaActivityError(enc)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "Batch job method to refresh qiita activity")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "Activity")
-		var err error
-
-		res, err := endpoint(ctx, nil)
 
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
